--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,9 +1,4 @@
-          </div>
-          <div class="span2"></div>
-        </div>
-      </div>
-    </div>
-    <div class="footer">
+      <div class="footer">
       <div class="container">
         <p class="muted credit" style="text-align:center">This page uses the
         <a href="http://twitter.github.com/bootstrap/">bootstrap</a> stylesheet,
@@ -20,4 +15,4 @@
     <script src="/assets/js/bootstrap-button.js"></script>
     <script src="/assets/js/bootstrap-typeahead.js"></script>
   </body>
-<
+</html>
