--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,9 @@
+  <body>
+    <div id="wrap">
+      <div class="container">
+        <div class="row">
+          <div class="span2"></div>
+          <div class="span8">
             <h1 style="text-align:center">{{.Title}}</h1>
             <p>opmlfeed is an OPML subscription service. it is a RESTful service,
             and can be interacted with in the following ways:</p>
@@ -42,4 +48,10 @@
 }
              </pre>
              </ul>
+          </div>
+          <div class="span2"></div>
+        </div>
+      </div>
+    </div>
+
 
